# hkxc-anno-gui

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/actions/setup-deps/: action.yaml
.github/actions/setup-release/: action.yaml
.github/workflows/: build-and-test.yaml  release-gui.yaml
crates/gui/: index.html  package.json  vite.config.ts
crates/gui/src/: App.tsx  styles.css
crates/gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/gui/src-tauri/src/: cmd.rs  logger.rs  main.rs
crates/gui/src/support_hkanno/: index.ts  monaco_config.ts
crates/gui/src/support_hkanno/parser/payload_interpreter/: completion.ts  nodes.ts  parser.test.ts  parser.ts  signature.ts
crates/gui/src/support_hkanno/parser/simple/: index.test.ts  index.ts
crates/gui/src/support_hkanno/parser/strict/: nodes.ts  parser.test.ts  parser.ts
crates/gui/src/support_hkanno/providers/: code_action.ts  completion.ts  diagnostic.ts  formatter.ts  hover.ts  inlay_hint.ts  monarch_token.ts  semantic_token.ts  signature.ts
crates/serde_hkx_hkanno/: Cargo.toml
crates/serde_hkx_hkanno/src/: editor.rs  file_collector.rs  lib.rs  parser.rs
crates/tracing_rotation/: Cargo.toml
crates/tracing_rotation/src/: lib.rs
tauri-prototype/: package-lock.json  package.json
tauri-prototype/src/: App.tsx  main.tsx  styles.css
tauri-prototype/src-tauri/: Cargo.toml  tauri.conf.json
tauri-prototype/src-tauri/icons/: icon.icns
tauri-prototype/src-tauri/src/: main.rs
