[workspace.package]
version = "0.0.0"
description = ""
categories = []
authors = ["beefclot"]
license = "GPL-3.0"
repository = "https://github.com/beefclot/hkxc-anno-gui"
readme = "README.md"
edition = "2021"
rust-version = "1.91"

[workspace]
members = [
  "crates/gui/src-tauri",
  "crates/serde_hkx_hkanno",
  "crates/tracing_rotation",
  # "crates/hkxc_anno_cli",
]
resolver = "2"

[workspace.dependencies]
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] } # Implement (De)Serialize
serde_json = "1.0.145"                                 # gui: To avoid generate_context error.
snafu = "0.8.9"
tokio = "1.48.0"
tracing = { version = "0.1.43" }                       # logger

# workspace members
serde_hkx_hkanno = { path = "crates/serde_hkx_hkanno" }
tracing_rotation = { path = "crates/tracing_rotation" }


# NOTE: Set this to lto because there is a part of CI that assumes release dir, and use lto only when the tag is typed.
[profile.release]
# NOTE: Optimizing to the limit reduces the size of the binary, but for some reason,
# the second async fn cannot be executed, resulting in an error, so it is turned off.
# codegen-units = 1
debug = false
# lto = true
opt-level = 3
# panic = 'abort'
strip = true

# Use release mode during development to prevent `serde-hkx` stack overflow
# - ref: https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release-no-lto]
inherits = "dev"
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
