[package]
name = "hkxc-anno-gui"
version = "0.1.0"
description = "HKX Animation Annotation GUI"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "hkxc-anno-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-execute", "fs-all", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

