[package]
name = "hkxc-anno-gui"
version = "0.1.0"
description = "HKX Animation Annotation GUI"
authors = ["beefclot"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "hkxc-anno-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "fs-all", "dialog-open"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true, optional = true }

# workspace members
serde_hkx_hkanno = { workspace = true }
tracing_rotation = { workspace = true, optional = true }

[features]
default = ["tracing"]
custom-protocol = ["tauri/custom-protocol"]

tracing = ["dep:tracing", "dep:tracing_rotation"]
